@@ -1,7 +1,9 @@
 package uk.gov.hmcts.ethos.replacement.docmosis.helpers;
 
 import lombok.extern.slf4j.Slf4j;
+import org.apache.commons.collections4.CollectionUtils;
 import org.apache.poi.xssf.usermodel.XSSFWorkbook;
+import uk.gov.hmcts.ecm.common.helpers.UtilHelper;
 import uk.gov.hmcts.ecm.common.model.helper.SchedulePayload;
 import uk.gov.hmcts.et.common.model.bulk.items.CaseIdTypeItem;
 import uk.gov.hmcts.et.common.model.bulk.types.CaseType;
@@ -10,11 +12,11 @@ import uk.gov.hmcts.et.common.model.multiples.MultipleObject;
 import uk.gov.hmcts.et.common.model.multiples.items.CaseMultipleTypeItem;
 import uk.gov.hmcts.et.common.model.multiples.items.SubMultipleTypeItem;
 import uk.gov.hmcts.et.common.model.multiples.types.SubMultipleType;
+import uk.gov.hmcts.ethos.replacement.docmosis.exceptions.ExcelGenerationException;
 
 import java.io.ByteArrayOutputStream;
 import java.io.IOException;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 import java.util.Map;
@@ -37,22 +39,25 @@ import static uk.gov.hmcts.et.common.model.multiples.MultipleConstants.HEADER_3;
 import static uk.gov.hmcts.et.common.model.multiples.MultipleConstants.HEADER_4;
 import static uk.gov.hmcts.et.common.model.multiples.MultipleConstants.HEADER_5;
 import static uk.gov.hmcts.et.common.model.multiples.MultipleConstants.HEADER_6;
+import static uk.gov.hmcts.et.common.model.multiples.MultipleConstants.HEADER_7;
 
 @Slf4j
 public final class MultiplesHelper {
 
-    public static final List<String> HEADERS = new ArrayList<>(Arrays.asList(
-            HEADER_1, HEADER_2, HEADER_3, HEADER_4, HEADER_5, HEADER_6));
+    private static final List<String> HEADERS = new ArrayList<>(List.of(
+            HEADER_1, HEADER_2, HEADER_3, HEADER_4, HEADER_5, HEADER_6, HEADER_7));
     public static final String SELECT_ALL = "All";
+    public static final String MULTIPLE_SUFFIX = "_Multiple";
 
     private MultiplesHelper() {
     }
 
+    public static List<String> getHeaders() {
+        return HEADERS;
+    }
+
     public static List<String> getCaseIds(MultipleData multipleData) {
-
-        if (multipleData.getCaseIdCollection() != null
-                && !multipleData.getCaseIdCollection().isEmpty()) {
-
+        if (CollectionUtils.isNotEmpty(multipleData.getCaseIdCollection())) {
             return multipleData.getCaseIdCollection().stream()
                     .filter(key -> key.getId() != null && !key.getId().equals("null"))
                     .map(caseId -> caseId.getValue().getEthosCaseReference())
@@ -60,35 +65,38 @@ public final class MultiplesHelper {
                     .collect(Collectors.toList());
 
         } else {
-
             return new ArrayList<>();
-
         }
     }
 
-    // MID EVENTS COLLECTIONS HAVE KEY AS NULL BUT WITH VALUES!
-    public static List<String> getCaseIdsForMidEvent(MultipleData multipleData) {
-
-        if (multipleData.getCaseIdCollection() != null
-                && !multipleData.getCaseIdCollection().isEmpty()) {
-
-            return multipleData.getCaseIdCollection().stream()
-                    .filter(caseId -> caseId.getValue().getEthosCaseReference() != null)
-                    .map(caseId -> caseId.getValue().getEthosCaseReference())
-                    .distinct()
-                    .toList();
-
-        } else {
-
+    public static List<String> getCaseIdsFromCollection(List<CaseIdTypeItem> caseIdCollection) {
+        if (CollectionUtils.isEmpty(caseIdCollection)) {
             return new ArrayList<>();
-
         }
+
+        return caseIdCollection.stream()
+                .filter(key -> key.getId() != null && !key.getId().equals("null"))
+                .map(caseId -> caseId.getValue().getEthosCaseReference())
+                .distinct()
+                .toList();
+    }
+
+    // MID EVENTS COLLECTIONS HAVE KEY AS NULL BUT WITH VALUES!
+    public static List<String> getCaseIdsForMidEvent(List<CaseIdTypeItem> caseIdCollection) {
+        if (CollectionUtils.isEmpty(caseIdCollection)) {
+            return new ArrayList<>();
+        }
+
+        return caseIdCollection.stream()
+                .filter(caseId -> caseId.getValue().getEthosCaseReference() != null)
+                .map(caseId -> caseId.getValue().getEthosCaseReference())
+                .distinct()
+                .toList();
     }
 
     public static List<CaseIdTypeItem> filterDuplicatedAndEmptyCaseIds(MultipleData multipleData) {
 
-        if (multipleData.getCaseIdCollection() != null
-                && !multipleData.getCaseIdCollection().isEmpty()) {
+        if (CollectionUtils.isNotEmpty(multipleData.getCaseIdCollection())) {
 
             return multipleData.getCaseIdCollection().stream()
                     .filter(caseId ->
@@ -266,7 +274,7 @@ public final class MultiplesHelper {
 
     public static List<String> generateSubMultipleStringCollection(MultipleData multipleData) {
 
-        if (multipleData.getSubMultipleCollection() != null && !multipleData.getSubMultipleCollection().isEmpty()) {
+        if (CollectionUtils.isNotEmpty(multipleData.getSubMultipleCollection())) {
 
             return multipleData.getSubMultipleCollection().stream()
                     .map(subMultipleTypeItem -> subMultipleTypeItem.getValue().getSubMultipleName())
@@ -321,12 +329,12 @@ public final class MultiplesHelper {
 
         for (Object item : list) {
             String ethosCaseRef;
-            if (item instanceof String) {
-                ethosCaseRef = (String) item;
-            } else if (item instanceof MultipleObject) {
-                ethosCaseRef = ((MultipleObject) item).getEthosCaseRef();
-            } else if (item instanceof SchedulePayload) {
-                ethosCaseRef = ((SchedulePayload) item).getEthosCaseRef();
+            if (item instanceof String string) {
+                ethosCaseRef = string;
+            } else if (item instanceof MultipleObject multipleObject) {
+                ethosCaseRef = multipleObject.getEthosCaseRef();
+            } else if (item instanceof SchedulePayload schedulePayload) {
+                ethosCaseRef = schedulePayload.getEthosCaseRef();
             } else {
                 log.info("unrecognised input object type: {}", item.getClass());
                 break;
@@ -357,10 +365,21 @@ public final class MultiplesHelper {
             workbook.close();
         } catch (IOException e) {
             log.error("Error generating the excel");
-            throw new RuntimeException("Error generating the excel", e);
+            throw new ExcelGenerationException("Error generating the excel", e);
         }
 
         return bos.toByteArray();
     }
 
+    public static String removeMultipleSuffix(String caseTypeId) {
+        return caseTypeId.replace(MULTIPLE_SUFFIX, "");
+    }
+
+    public static String appendMultipleSuffix(String caseTypeId) {
+        return caseTypeId + MULTIPLE_SUFFIX;
+    }
+
+    public static String getListingMultipleCaseTypeId(String caseTypeId) {
+        return UtilHelper.getListingCaseTypeId(caseTypeId) + MULTIPLE_SUFFIX;
+    }
 }
